tests/expectations/parser/functions/ident_token_fail.out
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found '1'
    --> test:3:5
     |
   3 |     1 main() {}}
     |     ^
